{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 27,
  "lineage": "ad1e233f-af80-af7f-1cf3-622f6b910cd6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/networkInterfaces/az104-04-nic0",
            "internal_domain_name_suffix": "0nd2j2in5piunpomqwcaz0bi4c.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.40.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/publicIPAddresses/az104-04-pip0",
                "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet0"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-44-91-24",
            "name": "az104-04-nic0",
            "private_ip_address": "10.40.0.4",
            "private_ip_addresses": [
              "10.40.0.4"
            ],
            "resource_group_name": "az104-04-rg1",
            "tags": {
              "ENV": "DEV"
            },
            "virtual_machine_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Compute/virtualMachines/az104-04-vm0"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip0",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet0",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/networkInterfaces/az104-04-nic1",
            "internal_domain_name_suffix": "0nd2j2in5piunpomqwcaz0bi4c.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.40.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/publicIPAddresses/az104-04-pip1",
                "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-3A-4E-53",
            "name": "az104-04-nic1",
            "private_ip_address": "10.40.1.4",
            "private_ip_addresses": [
              "10.40.1.4"
            ],
            "resource_group_name": "az104-04-rg1",
            "tags": {
              "ENV": "DEV"
            },
            "virtual_machine_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Compute/virtualMachines/az104-04-vm1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.pip1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-04-nsg01",
            "location": "westeurope",
            "name": "az104-04-nsg01",
            "resource_group_name": "az104-04-rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPInBound",
                "priority": 300,
                "protocol": "Tcp",
                "source_address_prefix": "37.205.44.26/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsrule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-04-nsg01/securityRules/AllowRDPInBound",
            "name": "AllowRDPInBound",
            "network_security_group_name": "az104-04-nsg01",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "az104-04-rg1",
            "source_address_prefix": "37.205.44.26/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/publicIPAddresses/az104-04-pip0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.97.241.59",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "az104-04-pip0",
            "resource_group_name": "az104-04-rg1",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ENV": "DEV"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/publicIPAddresses/az104-04-pip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.117.192.133",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "az104-04-pip1",
            "resource_group_name": "az104-04-rg1",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ENV": "DEV"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet0",
            "name": "subnet0",
            "resource_group_name": "az104-04-rg1",
            "virtual_network_name": "az104-04-vnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.40.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "az104-04-rg1",
            "virtual_network_name": "az104-04-vnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassoc0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet0",
            "network_security_group_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-04-nsg01",
            "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet0"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_subnet.subnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/networkSecurityGroups/az104-04-nsg01",
            "subnet_id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.40.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f1c447d3-fb0d-46d1-bdcc-85840ce828f2",
            "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1",
            "location": "westeurope",
            "name": "az104-04-vnet1",
            "resource_group_name": "az104-04-rg1",
            "subnet": [
              {
                "address_prefix": "10.40.0.0/24",
                "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet0",
                "name": "subnet0"
              },
              {
                "address_prefix": "10.40.1.0/24",
                "id": "/subscriptions/76a7f95f-ddfe-414e-b234-fed7b4cdeecd/resourceGroups/az104-04-rg1/providers/Microsoft.Network/virtualNetworks/az104-04-vnet1/subnets/subnet1",
                "name": "subnet1"
              }
            ]
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}